--- a/Reports/cucumber-html-reports/overview-steps.html
+++ b/Reports/cucumber-html-reports/overview-steps.html
@@ -74,7 +74,7 @@ $(document).ready(function() {
   <tbody>
     <tr class="info">
       <td>No Name (add projectName to cucumber-reporting.properties)</td>
-      <td>12 Dec 2024, 17:28</td>
+      <td>12 Dec 2024, 21:00</td>
     </tr>
   </tbody>
 </table>
@@ -114,76 +114,68 @@ $(document).ready(function() {
             <tr>
               <td class="location">stepDefs.Hooks.setUp()</td>
               <td>1</td>
-              <td class="duration" data-value="2824912000">2.824</td>
-              <td class="duration" data-value="2824912000">2.824</td>
-              <td class="duration" data-value="2824912000">2.824</td>
+              <td class="duration" data-value="2906817000">2.906</td>
+              <td class="duration" data-value="2906817000">2.906</td>
+              <td class="duration" data-value="2906817000">2.906</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">stepDefs.Hooks.tearDown()</td>
               <td>1</td>
-              <td class="duration" data-value="196745000">0.196</td>
-              <td class="duration" data-value="196745000">0.196</td>
-              <td class="duration" data-value="196745000">0.196</td>
-              <td class="passed">100.00%</td>
-            </tr>
-            <tr>
-              <td class="location">stepDefs.VehicleValuationSteps.i_compare_the_output_returned_with(java.lang.String)</td>
-              <td>1</td>
-              <td class="duration" data-value="39344000">0.039</td>
-              <td class="duration" data-value="39344000">0.039</td>
-              <td class="duration" data-value="39344000">0.039</td>
+              <td class="duration" data-value="221961000">0.221</td>
+              <td class="duration" data-value="221961000">0.221</td>
+              <td class="duration" data-value="221961000">0.221</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">stepDefs.VehicleValuationSteps.i_feed_the_extracted_registration_numbers_on_the(java.lang.String)</td>
               <td>1</td>
-              <td class="duration" data-value="5810145000">5.810</td>
-              <td class="duration" data-value="5810145000">5.810</td>
-              <td class="duration" data-value="5810145000">5.810</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="15320417000">15.320</td>
+              <td class="duration" data-value="15320417000">15.320</td>
+              <td class="duration" data-value="15320417000">15.320</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">stepDefs.VehicleValuationSteps.i_have_read_and_extracted_vehicle_registration_numbers_from(java.lang.String)</td>
               <td>1</td>
-              <td class="duration" data-value="3054000">0.003</td>
-              <td class="duration" data-value="3054000">0.003</td>
-              <td class="duration" data-value="3054000">0.003</td>
+              <td class="duration" data-value="3017000">0.003</td>
+              <td class="duration" data-value="3017000">0.003</td>
+              <td class="duration" data-value="3017000">0.003</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">stepDefs.VehicleValuationSteps.i_navigate_to_the(java.lang.String)</td>
               <td>1</td>
-              <td class="duration" data-value="1816617000">1.816</td>
-              <td class="duration" data-value="1816617000">1.816</td>
-              <td class="duration" data-value="1816617000">1.816</td>
+              <td class="duration" data-value="1970477000">1.970</td>
+              <td class="duration" data-value="1970477000">1.970</td>
+              <td class="duration" data-value="1970477000">1.970</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">stepDefs.VehicleValuationSteps.i_should_be_presented_with(java.lang.String)</td>
               <td>1</td>
-              <td class="duration" data-value="385150000">0.385</td>
-              <td class="duration" data-value="385150000">0.385</td>
-              <td class="duration" data-value="385150000">0.385</td>
+              <td class="duration" data-value="386586000">0.386</td>
+              <td class="duration" data-value="386586000">0.386</td>
+              <td class="duration" data-value="386586000">0.386</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">stepDefs.VehicleValuationSteps.initPage()</td>
               <td>1</td>
-              <td class="duration" data-value="1297000">0.001</td>
-              <td class="duration" data-value="1297000">0.001</td>
-              <td class="duration" data-value="1297000">0.001</td>
+              <td class="duration" data-value="1705000">0.001</td>
+              <td class="duration" data-value="1705000">0.001</td>
+              <td class="duration" data-value="1705000">0.001</td>
               <td class="passed">100.00%</td>
             </tr>
         </tbody>
 
         <tfoot class="total">
           <tr>
-            <td>8</td>
-            <td>8</td>
-            <td class="duration">1.384</td>
-            <td class="duration">5.810</td>
-            <td class="duration">11.077</td>
+            <td>7</td>
+            <td>7</td>
+            <td class="duration">2.972</td>
+            <td class="duration">15.320</td>
+            <td class="duration">20.810</td>
             <td>Totals</td>
           </tr>
         </tfoot>
